	pygtk-gtkwidget.xml
	pygtk-gtkwindow.xml Make keycombos simultaneous.

	* pygtk-gtktextview.xml ("move-viewport") ("select-all") Add
	descriptions of these signals for GTK+ 2.4 and 2.2.
	("accepts-tab") ("overwrite") Add descriptions of these GTK+ 2.4
	properties.
	(set_accepts_tab) (get_accepts_tab) (set_overwrite) (get_overwrite)
	Add descriptions of these PyGTK 2,4 methods.

2004-04-15  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkmessagedialog.xml (set_markup) Add description of this
	PyGTK 2.4 method.

	* pygtk-gtknotebook.xml (get_n_pages) Add description.
	Add GTK+2.4 style properties
	Add return value description for "focus-tab" and "select-page"
	signals.

	* pygtk-gtkoptionmenu.xml Added deprecation warning for PyGTK 2.4

	* pygtk-gtkpaned.xml (get_child1) (get_child2) Add descriptions of
	these PyGTK 2.4 methods.
	("max-position") ("min-position") Add descriptions of these GTK+ 2.4
	properties.
	("resize") ("shrink") Add descriptions of these GTK+ 2.4 child
	properties.
	Add return value description for signals.

	* pygtk-gtkplug.xml (gtk.plug_new_for_display) Add description.
	(construct) Add warning - method not available since PyGTK 2.2

	* pygtk-gtkradioaction.xml Add.

	* pygtk-gtkradiobutton.xml Add description of "group-changed" signal
	for GTK+ 2.4

	* pygtk-gtkradiomenuitem.xml Add description of "group-changed" signal
	for GTK+ 2.4

	* pygtk-gtkradioaction.xml Fix description of "group" property.

	* pygtk-gtkradiotoolbutton.xml Add.

	* pygtk-gtkrange.xml Reorder property descriptions.

	* pygtk-gtkrcstyle.xml Add gtk.rc_reset_style() function for PyGTK 2.4

	* pygtk-gtkscale.xml (get_layout) (get_layout_offsets) Add
	descriptions for PyGTK 2.4

	* pygtk-gtkscrollbar.xml Reorder property descriptions.

	* pygtk-gtkscrolledwindow.xml Add "scrollbar-spacing" style property
	available in GTK+ 2.2

	* pygtk_gtkselectiondata.xml Add function description of
	gtk.selection_owner_set_for_display().
