@@ -44,6 +44,8 @@
 	(set_accepts_tab) (get_accepts_tab) (set_overwrite) (get_overwrite)
 	Add descriptions of these PyGTK 2,4 methods.
 
+	* pygtk-gtktoggleaction.xml Add.
+
 2004-04-15  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gtkmessagedialog.xml (set_markup) Add description of this
